--- a/scss/index.scss
+++ b/scss/index.scss
@@ -253,6 +253,7 @@ a {
     padding: 15px 40px;
     background-color: color.$base-color;
     border-radius: 50px;
+    cursor: pointer;
 
     &:not(:first-child) {
         margin-top: 20px;
