--- a/css/common-main.css
+++ b/css/common-main.css
@@ -2,6 +2,7 @@
 html, body {
   margin: 0;
   padding: 0;
+  scroll-padding-top: 150px;
 }
 
 body {
@@ -138,18 +139,18 @@ section {
 .header-wrap__nav__tel {
   position: relative;
   text-align: center;
-  font-size: 20px;
+  font-size: 24px;
   font-weight: 700;
 }
 .header-wrap__nav__tel::before {
   display: block;
   content: "";
   position: absolute;
-  top: 61%;
-  left: 28px;
+  top: 63%;
+  left: 12px;
   transform: translateY(-50%);
-  width: 20px;
-  height: 20px;
+  width: 25px;
+  height: 25px;
   background-image: url(../img/受話器の線画アイコン.png);
   background-size: cover;
 }
@@ -157,21 +158,19 @@ section {
 .header-wrap__nav__list__item__button {
   display: flex;
   justify-content: space-between;
-  margin-top: 15px;
+  margin-top: 10px;
 }
 
 .first-examination,
 .re-examination {
   display: block;
-  height: 50px;
-  padding-right: 17px;
-  padding-left: 17px;
+  padding: 10px 20px;
   border-radius: 15px;
   text-align: center;
   color: #fff;
   font-size: 20px;
   font-weight: 700;
-  line-height: 46px;
+  line-height: 1;
   transition: all 0.3s;
 }
 .first-examination:hover,
@@ -335,7 +334,7 @@ section {
 .footer__link a {
   display: inline-block;
   color: #fff;
-  font-size: 20px;
+  font-size: 18px;
 }
 
 .footer-link-sub {
@@ -348,7 +347,7 @@ section {
   display: block;
   padding-left: 10px;
   color: #fff;
-  font-size: 20px;
+  font-size: 16px;
 }
 .footer-link-sub__item a:not(:first-child) {
   margin-top: 10px;
