--- a/css/index.css
+++ b/css/index.css
@@ -241,6 +241,7 @@ a {
   padding: 15px 40px;
   background-color: #D8EFD3;
   border-radius: 50px;
+  cursor: pointer;
 }
 .faq__list:not(:first-child) {
   margin-top: 20px;
