--- a/scss/common-main.scss
+++ b/scss/common-main.scss
@@ -10,6 +10,7 @@ $font-weight-bold: 700;
 html, body {
     margin: 0;
     padding: 0;
+    scroll-padding-top: 150px;
 }
 body {
     font-family: $font;
@@ -143,18 +144,18 @@ section {
 .header-wrap__nav__tel {
     position: relative;
     text-align: center;
-    font-size: 20px;
+    font-size: 24px;
     font-weight: $font-weight-bold;
 
     &::before {
         display: block;
         content: "";
         position: absolute;
-        top: 61%;
-        left: 28px;
+        top: 63%;
+        left: 12px;
         transform: translateY(-50%);
-        width: 20px;
-        height: 20px;
+        width: 25px;
+        height: 25px;
         background-image: url(../img/受話器の線画アイコン.png);
         background-size: cover;
     }
@@ -162,20 +163,18 @@ section {
 .header-wrap__nav__list__item__button {
     display: flex;
     justify-content: space-between;
-    margin-top: 15px;
+    margin-top: 10px;
 }
 .first-examination,
 .re-examination {
     display: block;
-    height: 50px;
-    padding-right: 17px;
-    padding-left: 17px;
+    padding: 10px 20px;
     border-radius: 15px;
     text-align: center;
     color: #fff;
     font-size: 20px;
     font-weight: $font-weight-bold;
-    line-height: 46px;
+    line-height: 1;
     transition: all 0.3s;
 
     &:hover {
@@ -346,7 +345,7 @@ section {
     a {
         display: inline-block;
         color: #fff;
-        font-size: 20px;
+        font-size: 18px;
     }
 }
 .footer-link-sub {
@@ -360,7 +359,7 @@ section {
         display: block;
         padding-left: 10px;
         color: #fff;
-        font-size: 20px;
+        font-size: 16px;
 
         &:not(:first-child) {
             margin-top: 10px;
