--- a/scss/faq.scss
+++ b/scss/faq.scss
@@ -51,6 +51,7 @@ a {
   padding: 15px 40px;
   background-color: color.$main-color;
   border-radius: 50px;
+  cursor: pointer;
 
   &:not(:first-child) {
     margin-top: 20px;
@@ -134,6 +135,7 @@ a {
   padding: 15px 40px;
   background-color: #fff;
   border-radius: 50px;
+  cursor: pointer;
 
   &:not(:first-child) {
     margin-top: 20px;
